--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -8,7 +8,7 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
-		<slot />
+		
 	</body>
 </html>
 
@@ -18,5 +18,6 @@
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		background-color: black;
 	}
 </style>
