--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import navbar from "../components/navbar.astro";
+import Navbar from "../components/Navbar.astro";
 ---
 
-<Layout>
-	<header><nav></nav></header>
-	
+<Layout title="Portafolio">
+	<Navbar></Navbar>
 </Layout>
