--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,12 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	
+  
+    <main>
+      <slot/>
+    </main>
+   
+  </body>
+
 </html>
 
